--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,73 @@
-<section>
-  <h1 class="mt-5">welcome home</h1>
+<section class="my-5">
+  <div class="row g-0">
+    <div class="loop-slider col-md-8">
+      <owl-carousel-o [options]="mainSlideOptions">
+        @for (item of mainSlides; track $index) {
+        <ng-container>
+          <ng-template carouselSlide>
+            <img [src]="item.src" [alt]="item.alt" />
+          </ng-template>
+        </ng-container>
+        }
+      </owl-carousel-o>
+    </div>
+    <div class="static-slide col-md-4">
+      <img src="slide-1.jpeg" alt="slide-1" />
+      <img src="slide-2.jpeg" alt="slide-2" />
+    </div>
+  </div>
 </section>
+
+@if (categories.length > 0) {
+<section class="my-5">
+  <owl-carousel-o [options]="categoryOptions">
+    @for (item of categories; track $index) {
+    <ng-container>
+      <ng-template carouselSlide>
+        <img
+          [src]="item.image"
+          [alt]="item.slug"
+          [title]="item.name"
+          class="image-slide"
+        />
+        <h6>{{ item.name }}</h6>
+      </ng-template>
+    </ng-container>
+    }
+  </owl-carousel-o>
+</section>
+} @if (products.length > 0 ) {
+<section class="my-5">
+  <div class="row g-4">
+    @for (product of products | slice:0:15; track $index) {
+    <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-2">
+      <div class="products bg-white position-relative">
+        <img
+          [src]="product.imageCover"
+          [title]="product.title"
+          [alt]="product.title"
+          class="w-100 mw-100"
+        />
+        <div class="info py-3 px-2">
+          <h3 class="main-color h5 mb-3">{{ product.brand.name }}</h3>
+          <h4 class="h6 text-main-dark mb-3">
+            {{ product.title.split(" ").slice(0, 3).join(" ") }}
+          </h4>
+          <div
+            class="price d-flex flex-row justify-content-between align-items-center mb-3"
+          >
+            <span class="text-muted"
+              >{{ product.price | currency : "EGP " }}
+            </span>
+            <span class="text-muted">
+              <i class="fa-solid fa-star" style="color: #ffd43b"></i>
+              {{ product.ratingsAverage }}
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
+    }
+  </div>
+</section>
+}
