--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -2,4 +2,9 @@
 <div class="container">
   <router-outlet></router-outlet>
 </div>
+@if (scrollUp) {
+<button class="up" (click)="scrollTop()">
+  <i class="fa-solid fa-angle-up fa-bounce"></i>
+</button>
+}
 <app-footer></app-footer>
