--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,10 +14,32 @@
   --radius: 8px;
   --main-transition: 0.4s;
 }
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #d8d8d8;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--Jasper);
+}
 
 body {
   font-family: "Poppins", sans-serif;
   background-color: var(--Ghost-White);
+}
+
+.main-color {
+  color: var(--Jasper);
+}
+.bg-main {
+  background-color: var(--Jasper);
+}
+
+.text-main-dark {
+  color: var(--text-color-dark);
 }
 
 .active_link {
@@ -58,11 +80,24 @@ a {
   }
 }
 
-.product {
+.products {
   box-shadow: var(--shadow);
   border-radius: var(--radius);
   transition: var(--main-transition);
+  overflow: hidden;
   &:hover {
     transform: translateY(-5px);
   }
+}
+
+.up {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  border: none;
+  background-color: var(--Jasper);
+  color: white;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
 }
